// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DividerLine /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_marginTop_3_mobile__onxwjuzz sprinkles_marginBottom_3_mobile__onxwjuwf sprinkles_backgroundColour_shine__onxwju3r DividerLine_size_horizontal_2__k1y61r1"
    data-od-component="divider-line"
  />
</div>
`;

exports[`<DividerLine /> > should match the snapshot as vertical 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_marginLeft_3_mobile__onxwjuxj sprinkles_marginRight_3_mobile__onxwjuyr sprinkles_backgroundColour_shine__onxwju3r DividerLine_size_vertical_2__k1y61r4"
    data-od-component="divider-line"
  />
</div>
`;
